[gd_scene load_steps=13 format=3 uid="uid://dju55aqrgmmbs"]

[ext_resource type="Script" path="res://Scenes/Player/Attacks/DeprecatedChainAttack.gd" id="1_40rnm"]
[ext_resource type="Texture2D" uid="uid://dsbjo4n82s2mn" path="res://Assets/Player/Attacks/Chain Spritesheet.png" id="1_n7ccg"]
[ext_resource type="AudioStream" uid="uid://b63xw7oispmi2" path="res://Assets/Player/Attacks/chain_01.ogg" id="3_hy5ql"]
[ext_resource type="AudioStream" uid="uid://bmwao5a7vnvto" path="res://Assets/Player/Attacks/chain_02.ogg" id="4_nne8g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kmg8"]
size = Vector2(6.69616, 47.007)

[sub_resource type="Animation" id="Animation_3jd48"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ChainSFX:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-16.0]
}

[sub_resource type="Animation" id="Animation_1ydfb"]
resource_name = "unused_bash_swing"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ChainSFX:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-16.0, -16.0, -24.0, -32.0, -50.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(9.46299, 35.8138), Vector2(7.19615, 40.0617), Vector2(4.9997, 43.4106), Vector2(6.30409, 47.3762), Vector2(9.4282, 45.3701), Vector2(6.8637, 46.8313), Vector2(6.27566, 48.5934), Vector2(6, 48), Vector2(7.27912, 48.7632), Vector2(6.37831, 48.3731), Vector2(4.24264, 46.6274), Vector2(6.69616, 47.007)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(14.655, -8.545), Vector2(15.25, -11.567), Vector2(15.056, -13.427), Vector2(13.54, -17.975), Vector2(9.851, -19.242), Vector2(6.174, -21.587), Vector2(3.823, -23.912), Vector2(1, -24), Vector2(-5.375, -22.533), Vector2(-9.921, -20.046), Vector2(-13.515, -16.515), Vector2(-16.283, -12.875)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1.309, 1.0472, 0.916298, 0.719948, 0.523598, 0.261799, 0.1309, 0.0, -0.261799, -0.523598, -0.785397, -1.0472]
}

[sub_resource type="Animation" id="Animation_76721"]
resource_name = "unused_straight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6.69616, 47.007)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1r3n5"]
resource_name = "unused_swing"
length = 0.575
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ChainSFX:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-16.0, -16.0, -24.0, -32.0, -50.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(9.46299, 35.8138), Vector2(7.19615, 40.0617), Vector2(4.9997, 43.4106), Vector2(6.30409, 47.3762), Vector2(9.4282, 45.3701), Vector2(6.8637, 46.8313), Vector2(6.27566, 48.5934), Vector2(6, 48), Vector2(7.27912, 48.7632), Vector2(6.37831, 48.3731), Vector2(4.24264, 46.6274), Vector2(6.69616, 47.007)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(14.655, -8.545), Vector2(15.25, -11.567), Vector2(15.056, -13.427), Vector2(13.54, -17.975), Vector2(9.851, -19.242), Vector2(6.174, -21.587), Vector2(3.823, -23.912), Vector2(1, -24), Vector2(-5.375, -22.533), Vector2(-9.921, -20.046), Vector2(-13.515, -16.515), Vector2(-16.283, -12.875)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1.309, 1.0472, 0.916298, 0.719948, 0.523598, 0.261799, 0.1309, 0.0, -0.261799, -0.523598, -0.785397, -1.0472]
}

[sub_resource type="Animation" id="Animation_c0av1"]
resource_name = "unused_swing_old"
length = 0.575
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ChainSFX:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-16.0, -16.0, -24.0, -32.0, -50.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(34, 15), Vector2(35, 21), Vector2(34, 27), Vector2(31, 36), Vector2(23, 39), Vector2(16, 44), Vector2(11, 48), Vector2(6, 48), Vector2(16, 45), Vector2(26, 41), Vector2(33, 33), Vector2(39, 26)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(15, 28.5), Vector2(15.5, 25.5), Vector2(15, 22.5), Vector2(13.5, 18), Vector2(9.5, 16.5), Vector2(6, 14), Vector2(3.5, 12), Vector2(1, 12), Vector2(-6, 13.5), Vector2(-10, 15.5), Vector2(-13.5, 19.5), Vector2(-16.5, 23)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h810b"]
_data = {
"RESET": SubResource("Animation_3jd48"),
"unused_bash_swing": SubResource("Animation_1ydfb"),
"unused_straight": SubResource("Animation_76721"),
"unused_swing": SubResource("Animation_1r3n5"),
"unused_swing_old": SubResource("Animation_c0av1")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_57ou5"]
streams_count = 2
random_pitch = 1.12
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("3_hy5ql")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_nne8g")
stream_1/weight = 1.0

[node name="ChainAttack" type="Area2D" groups=["player_attacks"]]
script = ExtResource("1_40rnm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -24)
shape = SubResource("RectangleShape2D_4kmg8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -36)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_n7ccg")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_h810b")
}

[node name="ChainSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_57ou5")
volume_db = -16.0
pitch_scale = 0.75

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
